# openExternals

./: CMakeLists.txt  README.md
cmake/: openExternals-VS2012-64-dev.bat.in  openExternals-Xcode.command.in  openExternalsConfig.cmake.in  setupRuntimePaths-openExternals.bat.in  setupRuntimePaths-openExternals.sh.in  setupRuntimePaths.cmake  setupXcodeProject.sh
